# mkrust

./: Cargo.toml  LICENCE  Makefile  README.md
src/: error.rs  hosts.rs  mackerelclient.rs  main.rs
src/format/: format.rs
src/hosts/: app.rs  command.rs
src/mackerelclient/: env.rs  host.rs  new.rs
