[package]
name = "mkrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.0.9", features = ["derive"] }
mackerel_client = { git = "https://github.com/itchyny/mackerel-client-rs" }
