[package]
name = "mkr"
version = "0.1.0"
authors = ["wafuwafu13 <wafuwafumariobaske@gmail.com>"]
description = "Command Line Tool for Mackerel"
repository = "https://github.com/wafuwafu13/mkrust"
readme = "README.md"
keywords = ["api", "mackerel"]
categories = ["api-bindings"]
license = "MIT"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.0.9", features = ["derive"] }
mackerel_client = "0.4.0"
